Lazy Spacing Correction

--- a/04 css pool/04 emrick.css
+++ b/04 css pool/04 emrick.css
@@ -5,7 +5,7 @@
  }
 
  p {
- 	font-size:18;
+ 	font-size: 18;
  	text-align: justify;
  }
 
@@ -43,17 +43,16 @@
  	color: #800000;
  }
 
-fieldset{
+ fieldset{
  	background-color: #efefef;
  }
 
  legend {
- 	border:1px dashed #000066;
+ 	border: 1px dashed #000066;
  	font-size: 20;
- 	color:#4C87A6;
+ 	color: #4C87A6;
  	font-weight: bold;
- 	background-color: #E0E0EB
- 	;
+ 	background-color: #E0E0EB;
  }
 
  table {
@@ -77,7 +76,7 @@ fieldset{
  }
 
  hr {
- 	border:1px double;
+ 	border: 1px double;
  }
 
  p a {
